# wagyu

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  LICENSE  Makefile  README.md  codecov.yml  travis_setup.sh
bench/: angus.cpp  angus.hpp  fixtures.hpp  run.cpp
docs/: README.md  bounds.md  building_and_testing.md  edges.md  example.md  getting_started.md  intersections.md  local_min_and_max.md  overview.md  point_intersections.md  vatti.md
fuzzer/: main.cpp
scripts/: coverage.sh  format.sh  setup.sh
tests/: benchmark.cpp  fixture-tester.cpp  fuzzer.cpp  orient.cpp  quick_clip_profile.cpp  run-benchmark-tests.sh  run-geometry-tests.sh  test.cpp
tests/expected/: difference-multi-polygon-with-spikes.json  difference-multipolygon-overlap-different-orientations.json  difference-nested-multi-polygon-outer-counter-clockwise-inner-counter-clockwise-hole-counter-clockwise.json  difference-overlapping-multi-polygon.json  difference-polygon-two-intersecting-holes-and-self-intersection.json  difference-polygon-two-intersecting-holes.json  difference-polygon-with-double-nested-holes.json  difference-polygon-with-exterior-hole.json  difference-polygon-with-hole-shared-edge.json  difference-polygon-with-hole-with-shared-point.json  difference-polygon-with-spike.json  difference-self-intersecting-ring-polygon.json  intersection-clockwise-polygon-counter-clockwise-hole.json  intersection-multi-polygon-with-spikes.json  intersection-multipolygon-both-counter-clockwise.json  intersection-nested-multi-polygon-outer-counter-clockwise-inner-counter-clockwise-hole-clockwise.json  intersection-overlapping-multi-polygon.json  intersection-polygon-two-intersecting-holes-and-self-intersection.json  intersection-polygon-two-intersecting-holes.json  intersection-polygon-with-double-nested-holes.json  intersection-polygon-with-exterior-hole.json  intersection-polygon-with-hole-shared-edge.json  intersection-polygon-with-hole-with-shared-point.json  intersection-polygon-with-spike.json  intersection-self-intersecting-ring-polygon.json  union-counter-clockwise-polygon-clockwise-hole.json  union-counter-clockwise-polygon.json  union-multi-polygon-with-shared-edge.json  union-polygon-with-spike.json  (+24 more)
(+59 files in other folders)
